After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724929 - gnome-shell crashed with SIGSEGV in dconf_gdbus_method_call_done()
gnome-shell crashed with SIGSEGV in dconf_gdbus_method_call_done()
Status: RESOLVED FIXED
Product: dconf
Classification: Core
Component: general
git master
Other Linux
: Normal blocker
: ---
Assigned To: dconf-maint
dconf-maint
: 725639 725970 726302 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-02-22 00:49 UTC by Cristian Aravena Romero
Modified: 2015-02-15 18:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
engine: fix race in match rule adding (2.20 KB, patch)
2014-02-22 01:07 UTC, Allison Karlitskaya (desrt)
committed Details | Review

Description Cristian Aravena Romero 2014-02-22 00:49:27 UTC
Open bug in Launchpad.net
https://bugs.launchpad.net/ubuntu/+source/gnome-shell/+bug/1283188

  • #0 ??
  • #1 dconf_gdbus_method_call_done
    at dconf-gdbus-thread.c line 231
  • #2 g_simple_async_result_complete
    at /build/buildd/glib2.0-2.39.90/./gio/gsimpleasyncresult.c line 763
  • #3 g_dbus_connection_call_done
    at /build/buildd/glib2.0-2.39.90/./gio/gdbusconnection.c line 5498
  • #4 g_simple_async_result_complete
    at /build/buildd/glib2.0-2.39.90/./gio/gsimpleasyncresult.c line 763
  • #5 complete_in_idle_cb
    at /build/buildd/glib2.0-2.39.90/./gio/gsimpleasyncresult.c line 775
  • #6 g_main_dispatch
    at /build/buildd/glib2.0-2.39.90/./glib/gmain.c line 3066
  • #7 g_main_context_dispatch
    at /build/buildd/glib2.0-2.39.90/./glib/gmain.c line 3641
  • #8 g_main_context_iterate
    at /build/buildd/glib2.0-2.39.90/./glib/gmain.c line 3712
  • #9 g_main_context_iteration
    at /build/buildd/glib2.0-2.39.90/./glib/gmain.c line 3773
  • #10 dconf_gdbus_worker_thread
    at dconf-gdbus-thread.c line 82
  • #11 g_thread_proxy
    at /build/buildd/glib2.0-2.39.90/./glib/gthread.c line 764
  • #12 start_thread
    at pthread_create.c line 312
  • #13 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 111

Comment 1 Allison Karlitskaya (desrt) 2014-02-22 01:07:36 UTC
Created attachment 269966 [details] [review]
engine: fix race in match rule adding

Due to the usual way async in dconf works, we can start getting replies
immediately (without returning to the mainloop).  For this reason, we
must be sure that we do not modify the OutstandingWatch structure at any
point after we've issued even one call because the results may already
be coming in.

For this reason, we must add up the 'pending' count in a separate loop
run before we start making the calls.
Comment 2 Allison Karlitskaya (desrt) 2014-02-22 01:20:21 UTC
Attachment 269966 [details] pushed as 54a490e - engine: fix race in match rule adding
Comment 3 Cristian Aravena Romero 2014-03-09 01:08:00 UTC
Open bug in launchpad.net:
https://bugs.launchpad.net/ubuntu/+source/gnome-shell/+bug/1289886

"Start dbus-monitor like so:
dbus-monitor --profile --session type='method_call',interface='org.gnome.SessionManager'"


BackTrace:

  • #0 ??
  • #1 dconf_gdbus_method_call_done
    at dconf-gdbus-thread.c line 231
  • #2 g_simple_async_result_complete
    at /build/buildd/glib2.0-2.39.91/./gio/gsimpleasyncresult.c line 763
  • #3 g_dbus_connection_call_done
    at /build/buildd/glib2.0-2.39.91/./gio/gdbusconnection.c line 5498
  • #4 g_simple_async_result_complete
    at /build/buildd/glib2.0-2.39.91/./gio/gsimpleasyncresult.c line 763
  • #5 complete_in_idle_cb
    at /build/buildd/glib2.0-2.39.91/./gio/gsimpleasyncresult.c line 775
  • #6 g_main_dispatch
    at /build/buildd/glib2.0-2.39.91/./glib/gmain.c line 3064
  • #7 g_main_context_dispatch
    at /build/buildd/glib2.0-2.39.91/./glib/gmain.c line 3663
  • #8 g_main_context_iterate
    at /build/buildd/glib2.0-2.39.91/./glib/gmain.c line 3734
  • #9 g_main_context_iteration
    at /build/buildd/glib2.0-2.39.91/./glib/gmain.c line 3795
  • #10 dconf_gdbus_worker_thread
    at dconf-gdbus-thread.c line 82
  • #11 g_thread_proxy
    at /build/buildd/glib2.0-2.39.91/./glib/gthread.c line 764
  • #12 start_thread
    at pthread_create.c line 312
  • #13 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 111

Comment 4 André Klapper 2014-03-09 02:02:04 UTC
*** Bug 725970 has been marked as a duplicate of this bug. ***
Comment 5 Rui Matos 2014-03-14 13:06:01 UTC
*** Bug 726302 has been marked as a duplicate of this bug. ***
Comment 6 Allison Karlitskaya (desrt) 2015-02-15 18:42:42 UTC
*** Bug 725639 has been marked as a duplicate of this bug. ***